엑셀 read 까지 구현

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,32 @@
     <title>Title</title>
 </head>
 <body>
-hello world!
+<h3>대용량 엑셀 읽어들이기</h3>
+<button onclick="excelRead()">Read</button>
 </body>
+<script>
+    //excelRead function
+    //버튼 클릭 시 C:\Temp\excelUpload\test.xlsx 안의 내용을 읽어들여 DB 에 저장한다
+    function excelRead(){
+        console.log("hello world");
+
+        var xhr = new XMLHttpRequest();
+
+
+        xhr.open("GET", "/api/excelRead", true);
+
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                // 응답이 성공적으로 왔을 때
+                alert("서버 응답: " + xhr.responseText);
+            } else {
+                // 에러 처리
+                alert("요청 실패: " + xhr.status);
+            }
+        };
+
+        xhr.send();
+    }
+
+</script>
 </html>
